# WOPR

./: .env.example  .gitignore  README.md  WOPR_IMPLEMENTATION.md  package-lock.json  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/services/: activity_tracker.rs  capture.rs  mod.rs  permissions.rs  storage.rs  system_info.rs  window.rs
src/lib/components/: AIPopup.svelte  ModeSelector.svelte  PermissionsPanel.svelte  RetroButton.svelte  RetroPanel.svelte  RetroSelect.svelte  SettingsPanel.svelte  index.js
src/lib/modes/: AssistantMode.svelte  MonitorMode.svelte  PomodoroMode.svelte  ScreenTimeMode.svelte  index.js
src/lib/presets/preset1/: Shell.svelte  index.js
src/lib/presets/preset1/components/: AIPopup.svelte  ModeSelector.svelte  RetroButton.svelte  RetroInput.svelte  RetroPanel.svelte  SettingsPanel.svelte  index.js
src/lib/presets/preset1/modes/: AssistantMode.svelte  ClockMode.svelte  MonitorMode.svelte  PomodoroMode.svelte  ScreenTimeMode.svelte  index.js
src/lib/presets/preset2/: Shell.svelte  index.js
src/lib/presets/preset2/components/: AIPopup.svelte  CozyButton.svelte  ModeSelector.svelte  PermissionsPanel.svelte  RetroProgress.svelte  RetroSelect.svelte  RetroText.svelte  RetroToggle.svelte  SettingsPanel.svelte  index.js
src/lib/presets/preset2/modes/: AssistantMode.svelte  ClockMode.svelte  MonitorMode.svelte  PomodoroMode.svelte  ScreenTimeMode.svelte  index.js
src/lib/services/: ai.js  capture.js  colorTheme.js  cozyTheme.js  index.js  knowledge.js  microphone.js  permissions.js  storage.js  voice.js  window.js
src/lib/stores/: config.js  config.svelte.js  index.js  mode.js  mode.svelte.js
src/routes/: +page.svelte
