[package]
name = "wopr"
version = "0.1.0"
description = "WOPR - Retro styled AI desktop assistant"
authors = ["Ivar Gavelin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wopr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System info for monitoring
sysinfo = "0.32"

# For YAML config handling
serde_yaml = "0.9"

# Screen capture
screenshots = "0.8"

# Base64 encoding for images
base64 = "0.22"

# Image processing
image = "0.25"

# Directory paths
dirs = "5"

# Dialog plugin for folder picker
tauri-plugin-dialog = "2"

# macOS permissions
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"

